# stepik_autot_3.3.6.10

./: conftest.py  pyproject.toml  test_items.py
