[tool.poetry]
name = "stepik_autot_3.3.6.10"
version = "0.1.0"
description = ""
authors = ["anvi <avikhlyantsev@fix.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
selenium = "^4.7.2"
chromedriver-autoinstaller = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

